[gd_scene load_steps=4 format=2]

[ext_resource path="res://Characters/Player/Player_Dead.gd" type="Script" id=1]
[ext_resource path="res://Characters/Movement.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape3D" id=1]

[node name="Player_Dead" type="CharacterBody3D"]
collision_layer = 4
script = ExtResource( 1 )
mouse_sensitivity = 0.3

[node name="OuterGimbal" type="Node3D" parent="."]

[node name="InnerGimbal" type="Node3D" parent="OuterGimbal"]

[node name="Camera3D" type="Camera3D" parent="OuterGimbal/InnerGimbal"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )

[node name="PlayerSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource( 1 )

[node name="Movement" parent="." instance=ExtResource( 2 )]

[node name="Death" type="AudioStreamPlayer" parent="."]
bus = "SoundFX"

[connection signal="timeout" from="PlayerSpawnTimer" to="." method="_on_PlayerSpawnTimer_timeout"]
